fix images position on mobile view

--- a/less/about.less
+++ b/less/about.less
@@ -203,7 +203,7 @@
         }
     }
     .slider-cloud {
-        bottom: -10%;
+        top: 53%;
         height: 24vh;
     }
 }
