--- a/less/styles.less
+++ b/less/styles.less
@@ -24,3 +24,8 @@ li {
     background: linear-gradient(289deg, rgb(238, 224, 201) 25%, rgba(202, 242, 241, 0) 48%);
 
 }
+@media screen and (max-width: 450px) {
+    .gradient-background {
+        padding: 0 15px;
+    }
+}
