--- a/less/unpack.less
+++ b/less/unpack.less
@@ -1,7 +1,7 @@
 .unpack {
     width: 100%;
     padding: 50px;
-    background: linear-gradient(289deg, rgb(238, 224, 201) 25%, rgba(202, 242, 241, 0) 48%);
+    // background: linear-gradient(289deg, rgb(238, 224, 201) 25%, rgba(202, 242, 241, 0) 48%);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -122,5 +122,78 @@
     }
     p {
         width: 263px;
+    }
+}
+@media screen and (max-width: 450px) {
+    .unpack {
+        padding: 0;
+        &-title {
+            font-size: 44px;
+            text-align: center;
+            letter-spacing: 20px;
+        }
+        .descr {
+            width: 300px;
+            margin-bottom: 75px;
+        }
+    }
+    .block {
+        width: auto;
+        &-title {
+            &::before {
+                top: 7vh;
+            }
+        }
+        p {
+            width: 240px;
+        }
+    }
+    .comfort {
+    margin-left: 0;
+    img {
+        right: 154px;
+        top: -37px;
+        width: 32vh;
+        }
+    }
+    .safe {
+        margin-left: 0;
+        img {
+            left: 176px;
+            bottom: 102px;
+            width: 20vh;       
+        }
+    }
+    .appreciation {
+        margin-right: 0;
+        img {
+            right: 132px;
+            width: 13vh;
+            top: -68px;
+        }
+    }
+    .counting {
+        margin-left: 0;
+        img {
+            width: 25vh;
+            right: 50px;
+            top: -75px;
+        }
+    }
+    .enthusiasm {
+        margin-left: 0;
+        img {
+            width: 33vh;
+            right: 2px;
+            bottom: 88px;
+        }
+    }
+    .success {
+        margin-left: 0;
+        img {
+            width: 30vh;
+            right: 50px;
+            top: -80px;       
+        }
     }
 }
